packages/next-swc/crates/core/tests/errors/server-actions/server-graph/12/input.js
'use server'
'use client'

export async function foo() {}
